# aig

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: agents.py  config.py  logging_config.py  main.py  parsers.py  prompts.py  utils.py
backend/tests/: test_api.py
frontend/: app.py
